Kubernetes/cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biradar-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:ap-south-1:344118038900:certificate/e1cc5eee-97ae-48b2-aaea-6c77c32fa7fd"
spec:
  ingressClassName: "nginx"
  rules:
  - host: "grocery.biradar.shop"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: shop-svc
            port:
              number: 80
  - host: "watch.biradar.shop"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: watch-svc
            port:
              number: 80
  tls:
  - hosts:
    - "grocery.biradar.shop"
    - "watch.biradar.shop"
    secretName: biradar-ingress-tls
