Kubernetes/ingress-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biradar-ingress
spec:
  ingressClassName: "nginx"
  rules:
  - host: "grocery.biradar.shop"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: shop-svc
            port:
              number: 80
  - host: "watch.biradar.shop"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: watch-svc
            port:
              number: 80
  tls:
  - hosts:
    - "grocery.biradar.shop"
    - "watch.biradar.shop"
    secretName: biradar-ingress-tls
    tls:
      acme:
        config:
          - dns01:
              provider: route53
            domains:
              - "grocery.biradar.shop"
              - "watch.biradar.shop"
