Kubernetes/name-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biradar-ingress
spec:
  ingressClassName: "nginx"
  rules:
  - host: "grocery.biradar.shop"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: shop-svc
            port:
              number: 80
  - host: "watch.biradar.shop"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: watch-svc
            port:
              number: 80
  tls:
  - hosts:
    - "grocery.biradar.shop"
    secretName: biradar-ingress-tls
    tls:
      certificateARN: arn:aws:acm:ap-south-1:344118038900:certificate/43a644e2-0f2b-40f6-a5ed-9562a66ebd58
  - hosts:
    - "watch.biradar.shop"
    secretName: biradar-ingress-tls
    tls:
      certificateARN: arn:aws:acm:ap-south-1:344118038900:certificate/43a644e2-0f2b-40f6-a5ed-9562a66ebd58
